<resources>
    <string name="app_name">FitLife Center</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre</string>
    <string name="nav_header_subtitle">Usuario</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="login_title">Inicio de sesión</string>
    <string name="login_usr">Usuario</string>
    <string name="login_psw">Contraseña</string>
    <string name="login_ingresar">Ingresar</string>

    <string name="menu_inicio">Bienvenido</string>
    <string name="menu_reportes">Reportes de Desempeño</string>
    <string name="menu_inventario">Inventario</string>
    <string name="menu_clases">Clases</string>

    <string name="entrenador1">Nadia Peña</string>
    <string name="entrenador2">Maria Lopez</string>
    <string name="entrenador3">Juan Perez</string>
    <string name="entrenador4">Pedro Rodriguez</string>

    <string-array name="Entrenadores">
        <item>Nadia Peña</item>
        <item>Maria Lopez</item>
        <item>Juan Perez</item>
        <item>Pedro Rodriguez</item>
    </string-array>

    <string name="lbEntrenador">Entrenador:</string>
    <string name="lbEval">Mes evaluado:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="agregar">Agregar una clase para</string>
    <string name="editar">Editar datos de clase</string>
    <string name="entrenador_assigned">Entrenador asignado</string>
    <string name="nombre">Nombre de clase:</string>
    <string name="Tipoo">Tipo de clase</string>
    <string name="Horario">Horario:</string>
    <string name="agregar2">Agregar</string>
    <string name="ver">Ver clases</string>
    <string name="ver1">Ver clases ad</string>

    <string-array name="HorasClase">
        <item>08 hrs -> 09 hrs</item>
        <item>09 hrs -> 10 hrs</item>
        <item>11 hrs -> 12 hrs</item>
        <item>12 hrs -> 13 hrs</item>
        <item>13 hrs -> 14 hrs</item>
        <item>14 hrs -> 15 hrs</item>
        <item>15 hrs -> 16 hrs</item>
        <item>16 hrs -> 17 hrs</item>
        <item>17 hrs -> 18 hrs</item>
        <item>18 hrs -> 19 hrs</item>
        <item>19 hrs -> 20 hrs</item>
        <item>20 hrs -> 21 hrs</item>
    </string-array>
    <string-array name="TiposClase">
        <item>Baile</item>
        <item>Pilates</item>
        <item>Zumba</item>
        <item>Gimnasio</item>
        <item>Boxeo</item>
        <item>Yoga</item>
    </string-array>
    <string name="editar_clase">Editar clase</string>
    <string name="guardar">Guardar</string>
    <string name="Edit">Editar</string>
    <string name="del">Eliminar</string>
    <string name="clas">Clase: </string>
    <string name="trainee">Entrenador: </string>

    <string-array name="equipos">
        <item>Caminadora A</item>
        <item>Caminadora B</item>
        <item>Caminadora C</item>
        <item>Prensa para pierna A</item>
        <item>Prensa para pierna B</item>
        <item>Prensa para pierna C</item>
        <item>Pec Fly A</item>
        <item>Pec Fly B</item>
        <item>Pec Fly C</item>
        <item>Chest Press A</item>
        <item>Chest Press B</item>
        <item>Chest Press C</item>
        <item>Bicicleta A</item>
        <item>Bicicleta B</item>
        <item>Bicicleta C</item>
        <item>Hack squad A</item>
        <item>Hack squad B</item>
        <item>Hack squad C</item>
    </string-array>

</resources>