<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fitlifecenter.ui.home.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_reportes"
        android:name="com.example.fitlifecenter.ui.reportes.ReportesFragment"
        android:label="@string/menu_reportes"
        tools:layout="@layout/fragment_reportes" />

    <fragment
        android:id="@+id/nav_clases"
        android:name="com.example.fitlifecenter.ui.clases.ClasesFragment"
        android:label="@string/menu_clases"
        tools:layout="@layout/fragment_clases" >
        <action
            android:id="@+id/action_verClaseEntrenadorFragment_to_claseFragment"
            app:destination="@id/nav_clase" >
            <argument
                android:name="idClase"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_clases_admin"
        android:name="com.example.fitlifecenter.ui.clases.ClaseAdmin"
        android:label="@string/menu_clases"
        tools:layout="@layout/fragment_vercad" >
        <action
            android:id="@+id/action_verClaseEntrenadorFragment_to_claseFragment"
            app:destination="@id/nav_clase">
            <argument
                android:name="idClase"
                app:argType="integer"
                android:defaultValue="-1" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_clase"
        android:name="com.example.fitlifecenter.ui.clases.AgregarClase"
        android:label="@string/clas"
        tools:layout="@layout/fragment_agregarclase" />
    <fragment
        android:id="@+id/nav_inventario_entrenador"
        android:name="com.example.fitlifecenter.InventarioEntrenador"
        android:label="@string/menu_inventario"
        tools:layout="@layout/fragment_inventario_entrenador">
    </fragment>

    <fragment
        android:id="@+id/nav_inventario_dueno"
        android:name="com.example.fitlifecenter.InventarioDueno"
        android:label="@string/menu_inventario"
        tools:layout="@layout/fragment_inventario_dueno" />

    <fragment
        android:id="@+id/nav_reporte_equipo"
        android:name="com.example.fitlifecenter.ReportesEquipo"
        android:label="Reporte de Equipo"
        tools:layout="@layout/fragment_reportes_equipo" />

</navigation>