<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".LoginActivity"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="?attr/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_title"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="28sp"
        android:lines="2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/login_usr"
        android:inputType="text"
        android:textColorHint="?attr/colorPrimary"
        android:background="@drawable/rounded_et"
        android:paddingStart="15dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/login_psw"
        android:inputType="numberPassword"
        android:textColorHint="?attr/colorPrimary"
        android:background="@drawable/rounded_et"
        android:paddingStart="15dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_username" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:onClick="onClick"
        android:text="@string/login_ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:tint="?attr/colorPrimary" />
</androidx.constraintlayout.widget.ConstraintLayout>