<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:background="@drawable/rounded"
    android:paddingLeft="20dp"
    android:paddingTop="30dp"
    android:paddingRight="20dp"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/txtClase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#222125"
        android:text="@string/clas"
        android:textColor="#3C3D37"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="#222125"
        android:textColor="#3C3D37"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txtClase"
        app:layout_constraintTop_toTopOf="@+id/txtClase" />

    <TextView
        android:id="@+id/txtEntrenador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#222125"
        android:text="@string/Horario"
        android:textColor="#3C3D37"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtClase"
        app:layout_constraintTop_toBottomOf="@+id/txtClase" />

    <TextView
        android:id="@+id/txtMes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="#222125"
        android:textColor="#3C3D37"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txtEntrenador"
        app:layout_constraintTop_toTopOf="@+id/txtEntrenador" />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#222125"
        android:text="@string/Edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEntrenador" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="#222125"
        android:text="@string/del"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEditar"
        app:layout_constraintTop_toTopOf="@+id/btnEditar" />

</androidx.constraintlayout.widget.ConstraintLayout>
